[package]
name = "oauth_cli"
version = "0.1.0"
edition = "2021"
authors = ["Francois Teychene <francois.teychene@gmail.com>"]
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.5", features = ["headers"] }
oauth2 = "4.1"
http = "0.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
# Should in an activation feature
open = "1"
